samples/_failures_safe/1761128174_aaef0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d512818a.c: In function ‘print_stats’:
./samples/SAFE/__tmp_d512818a.c:141:18: error: expected ‘)’ at end of input
  141 |     if (!analyzer
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_d512818a.c:141:5: error: expected declaration or statement at end of input
  141 |     if (!analyzer
      |     ^~
